Removed unused code

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -191,9 +191,9 @@ nav {
 .fixed-nav .links a:hover {
   color: var(--clr-secondary);
 }
-.fixed-nav .links-container {
+/* .fixed-nav .links-container {
   height: auto !important;
-}
+} */
 .nav-header {
   display: flex;
   align-items: center;
@@ -219,14 +219,13 @@ nav {
 .logo {
   height: 100px;
 }
-.links-container,
-.contact-btn {
+.links-container {
   height: 0;
   overflow: hidden;
   transition: var(--transition);
 }
 .show-links {
-  height: 200px;
+  height: 300px;
 }
 .links a {
   background: var(--off-white);
@@ -260,11 +259,15 @@ nav {
   .nav-toggle {
     display: none;
   }
-  .links-container,
-  .contact-btn {
+  .links-container {
     height: auto !important;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10rem;
   }
-  .links {
+  .links,
+  .contact-btn {
     display: flex;
   }
   .links a {
@@ -297,7 +300,7 @@ header {
   max-width: 1170px;
   margin: 0 auto;
   display: flex;
-  padding-top: 4rem;
+  padding-top: 5rem;
 }
 .container h3 {
   font-family: var(--ff-secondary);
@@ -374,15 +377,14 @@ footer p {
   position: fixed;
   bottom: 3rem;
   right: 3rem;
-  background: var(--clr-secondary);
+  background: var(--primary-clr);
   width: 2rem;
   height: 2rem;
   display: grid;
   place-items: center;
   border-radius: var(--radius);
-  color: var(--clr-white);
+  color: var(--off-white);
   animation: bounce 2s ease-in-out infinite;
-
   visibility: hidden;
   z-index: -100;
 }
