--- a/src/css/style.css
+++ b/src/css/style.css
@@ -189,7 +189,7 @@ nav {
   color: var(--grey-clr);
 }
 .fixed-nav .links a:hover {
-  color: var(--clr-secondary);
+  color: var(--secondary-clr);
 }
 /* .fixed-nav .links-container {
   height: auto !important;
@@ -300,7 +300,7 @@ header {
   max-width: 1170px;
   margin: 0 auto;
   display: flex;
-  padding-top: 5rem;
+  padding-top: 2.7rem;
 }
 .container h3 {
   font-family: var(--ff-secondary);
@@ -312,7 +312,7 @@ header {
 }
 .container p {
   color: var(--off-white);
-  margin: 1.5rem 0;
+  margin: 1rem 0;
   margin-bottom: 2.25rem;
 }
 
@@ -336,8 +336,12 @@ header {
     background: linear-gradient(rgba(63, 208, 212, 0.8), rgba(0, 0, 0, 0.9)),
     url(../images/herobg.jpg) center/cover no-repeat;
   }
+  .banner {
+    padding-top: 4.5rem;
+  }
   .container p {
     max-width: 40rem;
+    margin: 2rem 0;
   }
 
   .container h3 {
@@ -354,7 +358,7 @@ header {
 }
 #about,
 #services,
-#tours {
+#blog {
   height: 80vh;
 }
 #services {
