--- a/src/css/style.css
+++ b/src/css/style.css
@@ -314,11 +314,13 @@ header {
   text-transform: uppercase;
   line-height: 1.5;
   letter-spacing: var(--spacing);
+  line-height: 1.2;
 }
 .container p {
   color: var(--off-white);
   margin: 1rem 0;
   margin-bottom: 2.25rem;
+  line-height: 1.3;
 }
 
 .container .hero-btn {
@@ -347,10 +349,12 @@ header {
   .container p {
     max-width: 40rem;
     margin: 2rem 0;
+    line-height: 1.5;
   }
 
   .container h3 {
     font-size: 2rem;
+    line-height: 1.6;
   }
 }
 /* sections and title */
