--- a/src/css/style.css
+++ b/src/css/style.css
@@ -438,6 +438,51 @@ header {
   border-radius: var(--radius);
   margin: 2rem 0;
   background: url('../images/services_banner.jpg') center center/cover no-repeat;
+  background-attachment: fixed;
+}
+
+/* corporate team building */
+#corporate {
+  background-color: var(--light-grey);
+}
+
+.services-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-top: 1.5rem;
+}
+.services-content  .img-container {
+  width: 450px;
+  border-radius: var(--radius);
+  border: 1px solid black;
+  order: 2;
+}
+
+.services-content .title {
+  color: var(--secondary-clr);
+  font-size: 1.5rem;
+  font-family: var(--ff-secondary);
+  padding: 1rem 0;
+}
+
+@media screen and (min-width: 768px) {
+  .services-content {
+    flex-direction: row-reverse;
+    gap: 2rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .services-content  .img-container {
+    order: 1;
+    /* flex-grow: 1; */
+    /* height: 200px; */
+    width: 600px;
+  }
+
+  .services-content .services-text {
+    max-width: 500px;
+  }
 }
 footer {
   background: var(--clr-grey-1);
