--- a/src/css/style.css
+++ b/src/css/style.css
@@ -117,6 +117,17 @@ p {
   }
 }
 
+/* card */
+.card {
+  background-color: var(--primary-clr);
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
+  padding: 20px;
+  margin: 10px;
+  color: #333;
+}
+
+
 /*  global classes */
 .btn {
   text-transform: uppercase;
@@ -377,8 +388,9 @@ header {
   color: var(--clr-secondary);
 }
 
-#blog {
-  height: 80vh;
+#blog,
+#contact {
+  height: 100vh;
 }
 #services {
   background: var(--clr-white);
@@ -570,6 +582,37 @@ header {
   #games .services-content {
     flex-direction: row;
   }
+}
+
+.contact-form {
+  position: relative;
+  top: 60px;
+  width: 400px;
+  padding: 40px;
+  z-index: 100;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+textarea {
+border: 0;
+border-bottom: 2px solid var(--black-clr);
+width: 100%;
+padding: 15px;
+font-size: 16px;
+background-color: transparent;
+color: var(--off-white);
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  outline: none;
+}
+
+.contact-form .nav-btn:hover {
+  background-color: var(--off-white);
+  color: var(--primary-clr);
+
 }
 
 
