--- a/src/css/style.css
+++ b/src/css/style.css
@@ -349,11 +349,14 @@ header {
   transition: var(--transition);
 }
 
+.btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 /* whatsapp */
-.hero-section a {
-  position: absolute;
-  bottom: 100px;
-  right: 40px;
+.container .hero-section a img {
   width: 50px;
   height: 50px;
 }
